Change to csrf-sync package, and add errorHandle for format error return.
